--- a/Hydroponics_Composting.html
+++ b/Hydroponics_Composting.html
@@ -160,9 +160,20 @@
         font-size: 80%;
         font-style: italic;
     }
+    .margin {
+      margin-bottom: 20px;
+    }
+    .minus_margin {
+      margin-bottom: -45px;
+      margin-left: 10px;
+    }
+    audio::-webkit-media-controls-timeline {
+        display: none;
+    }
   </style>
 </head>
 <body>
+  <audio src="https://ia800901.us.archive.org/33/items/c418swedenminecraftvolumealpha/C418%20%20-%20Sweden%20-%20Minecraft%20Volume%20Alpha.mp4" autoplay></audio>
   <header>
     <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSa23vLIObmjp6--dsqiMJ7dnEFQqP8ec3qZw&s" alt=""width="100"></center>
     <em>Podar International School, Chinchwad</em>
@@ -387,7 +398,8 @@
       </ul>
       <p>Always check local laws for water use, waste disposal, and organic certification.</p>
     </section>
-    <p align="center">Add a review <a href="https://tinyurl.com/m4dz29fp" class="google_form"><i>here</i></a>.</p>
+    <p align="center" class="margin">Add a review <a href="https://tinyurl.com/m4dz29fp" class="google_form"><i>here</i></a> or here: <img src="cf2azpxw-qr.png" alt="QR code for Feedback" width="100" height="100" class="minus_margin"></p>
+    <br>
   </div>
   <footer>
     <p>This guide is for educational purposes. Consult experts for specific applications ONLY!</p>
@@ -410,6 +422,4 @@
     }
   </script>
 </body>
-
 </html>
-
