--- a/Hydroponics_Composting.html
+++ b/Hydroponics_Composting.html
@@ -173,7 +173,7 @@
   </style>
 </head>
 <body>
-  <audio src="https://ia800901.us.archive.org/33/items/c418swedenminecraftvolumealpha/C418%20%20-%20Sweden%20-%20Minecraft%20Volume%20Alpha.mp4" autoplay></audio>
+  <audio src="https://ia800901.us.archive.org/33/items/c418swedenminecraftvolumealpha/C418%20%20-%20Sweden%20-%20Minecraft%20Volume%20Alpha.mp4" control autoplay></audio>
   <header>
     <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSa23vLIObmjp6--dsqiMJ7dnEFQqP8ec3qZw&s" alt=""width="100"></center>
     <em>Podar International School, Chinchwad</em>
@@ -398,7 +398,7 @@
       </ul>
       <p>Always check local laws for water use, waste disposal, and organic certification.</p>
     </section>
-    <p align="center" class="margin">Add a review <a href="https://tinyurl.com/m4dz29fp" class="google_form"><i>here</i></a> or here: <img src="cf2azpxw-qr.png" alt="QR code for Feedback" width="100" height="100" class="minus_margin"></p>
+    <p align="center" class="margin">Add a review <a href="https://tinyurl.com/57fe2j62" class="google_form"><i>here</i></a> or here: <img src="cf2azpxw-qr.png" alt="QR code for Feedback" width="100" height="100" class="minus_margin"></p>
     <br>
   </div>
   <footer>
