--- a/Hydroponics_Composting.html
+++ b/Hydroponics_Composting.html
@@ -173,7 +173,7 @@
   </style>
 </head>
 <body>
-  <audio src="https://ia800901.us.archive.org/33/items/c418swedenminecraftvolumealpha/C418%20%20-%20Sweden%20-%20Minecraft%20Volume%20Alpha.mp4" control autoplay></audio>
+  <audio src="https://ia800901.us.archive.org/33/items/c418swedenminecraftvolumealpha/C418%20%20-%20Sweden%20-%20Minecraft%20Volume%20Alpha.mp4" autoplay></audio>
   <header>
     <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSa23vLIObmjp6--dsqiMJ7dnEFQqP8ec3qZw&s" alt=""width="100"></center>
     <em>Podar International School, Chinchwad</em>
@@ -423,3 +423,4 @@
   </script>
 </body>
 </html>
+
