--- a/Hydroponics_Composting.html
+++ b/Hydroponics_Composting.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Comprehensive Guide to Hydroponic Plants and Compost</title>
   <style>
     body {
@@ -173,9 +171,9 @@
   </style>
 </head>
 <body>
-  <audio src="https://ia800901.us.archive.org/33/items/c418swedenminecraftvolumealpha/C418%20%20-%20Sweden%20-%20Minecraft%20Volume%20Alpha.mp4" autoplay></audio>
+  <audio src="https://ia800901.us.archive.org/33/items/c418swedenminecraftvolumealpha/C418%20%20-%20Sweden%20-%20Minecraft%20Volume%20Alpha.mp4" autoplay=""></audio>
   <header>
-    <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSa23vLIObmjp6--dsqiMJ7dnEFQqP8ec3qZw&s" alt=""width="100"></center>
+    <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSa23vLIObmjp6--dsqiMJ7dnEFQqP8ec3qZw&amp;s" alt="" width="100"></center>
     <em>Podar International School, Chinchwad</em>
     <h2 class="heading">Comprehensive Guide to Hydroponic Plants and Compost</h2>
     <p class="para">This page provides an in-depth overview of hydroponic plant cultivation, composting techniques, their benefits, and how they interconnect for sustainable gardening. Whether you're a beginner or experienced grower, find detailed information, tips, and resources here.</p>
@@ -204,7 +202,7 @@
       </div>
         <a href="#tips-resources"><button class="dropbtn">Tips and Resources</button></a>
         <a href="#pioneers"><button class="dropbtn">Pioneers</button></a>
-  </nav>
+  </div></nav>
   <div class="container">
     <section id="hydroponics-intro">
       <h2>What is Hydroponics?</h2>
@@ -345,16 +343,16 @@
         <h3>Hydroponics Pioneers</h3>
         <ul>
             <li><strong>Ancient Origins – The Hanging Gardens of Babylon:</strong> One of the earliest examples of hydroponics-like systems, built around 600 BC by King Nebuchadnezzar II. Engineers used a chain-pump system to irrigate plants in terraced gardens without soil, showcasing advanced water management in a desert environment. This "wonder of the world" inspired later soil-less growing techniques.</li>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT94TIQeArhXTKl5tZTRgAUo6a7nvIOcqvhLA&s"alt="Reconstruction of the Hanging Gardens of Babylon" width="400">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT94TIQeArhXTKl5tZTRgAUo6a7nvIOcqvhLA&amp;s" alt="Reconstruction of the Hanging Gardens of Babylon" width="400">
             <p><em>Image: Artistic reconstruction of the Hanging Gardens of Babylon. (Source: Wikimedia Commons)</em></p>
             <li><strong>William Frederick Gericke:</strong> Known as the "father of hydroponics," this American botanist conducted groundbreaking experiments in the 1920s-1930s at the University of California, Berkeley. He grew tomato vines over 7 meters tall using nutrient solutions, proving plants could thrive without soil. His 1940 book "The Complete Guide to Soilless Gardening" popularized the term "hydroponics" and sparked global interest in controlled-environment agriculture.</li>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQSyhoDXsAX4HIwO0aYB8non-TdeuhkoUu2w&s" alt="Portrait of Sir Albert Howard" alt="William Frederick Gericke with his hydroponic tomato plants" width="400">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQSyhoDXsAX4HIwO0aYB8non-TdeuhkoUu2w&amp;s" alt="Portrait of Sir Albert Howard" width="400">
             <p><em>Image: William Frederick Gericke demonstrating his hydroponic experiments. (Source: Wikimedia Commons)</em></p>
         </ul>
         <h3>Composting Pioneers</h3>
         <ul>
             <li><strong>Sir Albert Howard:</strong> A British botanist and organic farming advocate in the early 20th century, Howard developed composting methods while working in India. Observing traditional Indian farming, he created "Indore composting," a process using organic waste to produce nutrient-rich humus. His 1940 book "An Agricultural Testament" emphasized composting as a way to mimic nature's cycles, influencing modern organic practices and reducing reliance on chemicals.</li>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQa8D_3aRyf2tLBFoBeUnfDHfgPDwO1hk0s_8kA86PZpac9UMDem7K31mszvL3VspDt29dLteDTg8DCCEo0V-WZaxV4OjQrE6raC4HbwynB8A&s=10" alt="Portrait of Sir Albert Howard" width="400">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQa8D_3aRyf2tLBFoBeUnfDHfgPDwO1hk0s_8kA86PZpac9UMDem7K31mszvL3VspDt29dLteDTg8DCCEo0V-WZaxV4OjQrE6raC4HbwynB8A&amp;s=10" alt="Portrait of Sir Albert Howard" width="400">
             <p><em>Image: Sir Albert Howard, pioneer of organic composting. (Source: Wikimedia Commons)</em></p>
             <li><strong>Ruth Stout:</strong> An American gardener and author in the 1950s-1960s, Stout revolutionized backyard composting with her "no-dig" method. She mulched heavily with organic materials like leaves and grass clippings, allowing them to decompose in place without turning. Her book "How to Have a Green Thumb Without an Aching Back" made composting accessible, showing how simple, lazy gardening could yield abundant, healthy produce.</li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Ruth_Stout.jpg/500px-Ruth_Stout.jpg" alt="Portrait of Ruth Stout" width="400">
@@ -398,7 +396,7 @@
       </ul>
       <p>Always check local laws for water use, waste disposal, and organic certification.</p>
     </section>
-    <p align="center" class="margin">Add a review <a href="https://tinyurl.com/57fe2j62" class="google_form"><i>here</i></a> or here: <img src="cf2azpxw-qr.png" alt="QR code for Feedback" width="100" height="100" class="minus_margin"></p>
+    <p align="center" class="margin">Add a review <a href="https://tinyurl.com/m4dz29fp" class="google_form"><i>here</i></a> or here: <img src="cf2azpxw-qr.png" alt="QR code for Feedback" width="100" height="100" class="minus_margin"></p>
     <br>
   </div>
   <footer>
@@ -421,6 +419,6 @@
       }
     }
   </script>
-</body>
-</html>
 
+
+</body></html>
