--- a/HydroponicsComposting.html
+++ b/HydroponicsComposting.html
@@ -171,7 +171,7 @@
   </style>
 </head>
 <body>
-  <audio control autoplay>
+  <audio controls autoplay>
     <source src="https://archive.org/details/minecraft_volume_alpha_flac/MP3/18.+Sweden.mp3" type="audio/mpeg">
   </audio>
   <header>
@@ -424,6 +424,7 @@
 
 
 </body></html>
+
 
 
 
