--- a/HydroponicsComposting.html
+++ b/HydroponicsComposting.html
@@ -416,12 +416,13 @@ function unlockAudio() {
       </ul>
       <p>Always check local laws for water use, waste disposal, and organic certification.</p>
     </section>
-    <p align="center" class="margin">Add a review <a href="https://tinyurl.com/57fe2j62" class="google_form"><i>here</i></a> or here: <img src="cf2azpxw-qr.png" alt="QR code for Feedback" width="100" height="100" class="minus_margin"></p>
+    <p align="center" class="margin">Add a review <a href="https://tinyurl.com/79ted4xf" class="google_form"><i>here</i></a> or here: <img src="79ted4xf-qr.png" alt="QR code for Feedback" width="100" height="100" class="minus_margin"></p>
     <br>
   </div>
   <footer>
     <p>This guide is for educational purposes. Consult experts for specific applications ONLY!</p>
-    <p><em>Presented by: <strong>Granth Parekh, Stuti Nahar, Aaryan Hingmire, Arnav Pal, Rithvik A R, Sai Aditya Thevar</strong></em></p>  
+    <p><em>Presented by: <strong>Granth Parekh, Stuti Nahar, Aaryan Hingmire, Arnav Pal, Rithvik A R, Sai Aditya Thevar</strong></em></p>
+    <p> &copy; Granth Parekh</p>  
   </footer>
   <script>
     function toggleDropdown(id) {
@@ -441,17 +442,3 @@ function unlockAudio() {
 
 
 </body></html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
