--- a/HydroponicsComposting.html
+++ b/HydroponicsComposting.html
@@ -168,6 +168,9 @@
     audio::-webkit-media-controls-timeline {
         display: none;
     }
+    .shrink {
+      font-size: 80%;
+    }
   </style>
 </head>
 <body>
@@ -197,6 +200,7 @@ function unlockAudio() {
     <em>Podar International School, Chinchwad</em>
     <h2 class="heading">Comprehensive Guide to Hydroponic Plants and Compost</h2>
     <p class="para">This page provides an in-depth overview of hydroponic plant cultivation, composting techniques, their benefits, and how they interconnect for sustainable gardening. Whether you're a beginner or experienced grower, find detailed information, tips, and resources here.</p>
+    <p class="shrink">Please enable desktop view for better experience if you are on mobile</p>
     <p align="right" class="indent">Average Rating = ⭐⭐⭐⭐⭐</p>
   </header>
   <nav>
@@ -442,5 +446,6 @@ function unlockAudio() {
 
 
 </body></html>
+
 
 
