--- a/HydroponicsComposting.html
+++ b/HydroponicsComposting.html
@@ -425,7 +425,7 @@ function unlockAudio() {
   </div>
   <footer>
     <p>This guide is for educational purposes. Consult experts for specific applications ONLY!</p>
-    <p><em>Presented by: <strong>Granth Parekh, Stuti Nahar, Aaryan Hingmire, Arnav Pal, Rithvik A R, Sai Aditya Thevar</strong></em></p>
+    <p><em>Presented by: <strong>Granth Parekh, Scooty Ramos, Aaryan Hingmire, Arnav Pal, Rithvik A R, Sai Aditya Thevar</strong></em></p>
     <p> &copy; Granth Parekh</p>  
   </footer>
   <script>
@@ -446,6 +446,7 @@ function unlockAudio() {
 
 
 </body></html>
+
 
 
 
